# rmcp_ddg_search

./: .gitignore  Cargo.toml  README.md  benchmark.sh  benchmark_log.md  fetch_mcp.sh
src/: main.rs
