[package]
name = "rmcp_ddg_search"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["std"] }
chromiumoxide = "0.9.1"
ego-tree = "0.11.0"
futures = "0.3.31"
reqwest = { version = "0.13.4", features = ["json", "default-tls", "form"] }
readabilityrs = "0.1.3"
rmcp = { version = "2.0.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2.1"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
urlencoding = "2.1.3"
